--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
     "react-tilt": "^0.1.4",
+    "react-toastify": "^8.1.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
