--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.0",
     "react-tilt": "^0.1.4",
     "react-toastify": "^8.1.1",
+    "react-tooltip": "^4.2.21",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
